package entities;

public enum EstadoProyecto {
    EN_PRESUPUESTO,
    EN_CURSO,
    FINALIZADO
}
